Platform/game-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-nodeport-service
spec:
  type: NodePort
  selector:
    app: gameservice
  ports:
    - name: gameservice
      protocol: TCP
      port: 80
      targetPort: 80
