Platform/game-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameservice
  template:
    metadata:
      labels:
        app: gameservice
    spec:
      containers:
        - name: gameservice
          image: russianaleksey/gameservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: game-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: gameservice
  ports:
    - name: gameservice
      protocol: TCP
      port: 80
      targetPort: 80
